# glm_bindings_squirrel

./: .gitmodules  CMakeLists.txt  README.md  glm_bindings_squirrel.hpp  tests.cpp
test_scripts/: abs.nut  add_native_var.nut  ceil.nut  clamp.nut  fma.nut  fract.nut  isinf.nut  isnan.nut  max.nut  min.nut  mod.nut  modf.nut  round.nut  sign.nut  smoothstep.nut  step.nut  trunc.nut  vec2_ops.nut  vec3_ops.nut
